--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,29 @@
 body {
     background-color: rgb(255, 194, 225);
     color: rgb(231, 84, 158);
+    font-family: sans-serif;
+    display: flex;
+    justify-content: center;
+    min-height: 100vh;
+
+}
+.foto-perfil{
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    border: 3px solid white;
+}
+
+.container{
+    max-width: 600px;
+    padding: 20px;
+    text-align: center;
+
+}
+
+.perfil h1{
+    font-size: 1.5rem;
+    margin-bottom: 5px;
+    
 }
