--- a/styles.css
+++ b/styles.css
@@ -5,25 +5,54 @@ body {
     display: flex;
     justify-content: center;
     min-height: 100vh;
-
 }
+
 .foto-perfil{
     width: 120px;
     height: 120px;
     border-radius: 50%;
     margin-bottom: 10px;
-    border: 3px solid white;
+    border: 3px solid rgb(231, 84, 158);
 }
 
 .container{
     max-width: 600px;
     padding: 20px;
     text-align: center;
-
 }
 
 .perfil h1{
     font-size: 1.5rem;
     margin-bottom: 5px;
-    
+}
+
+.link{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.link-botao{
+    background-color: rgb(255, 182, 193);
+    color: rgb(228, 93, 160);
+    padding: 15px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.link-botao i{
+    margin-right: 10px;
+    font-size: 1.2rem;
+}
+
+.link-botao:hover{
+    background-color: rgb(133, 0, 71);
+    transform: translateY(-2px);
 }
